--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --color-black: #252229;
+  --color-gray: #afaab5;
+  --color-lightgray: #efefef;
+  --color-skyblue: #b9e9ff;
+}
+
 h1 {
   @apply text-xl font-bold;
+}
+
+.bg-primary {
+  background-color: var(--color-black);
 }
